--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
     "sonner": "^1.0.3",
+    "swiper": "^11.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^4.2.1",
