--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-hook-form": "^7.47.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
+    "recharts": "^2.9.1",
     "sonner": "^1.0.3",
     "swiper": "^11.0.3",
     "tailwind-merge": "^1.14.0",
